# Expo

./: .gitignore  2D_Arrays_and_Function_Implementation.md  Laptop.md  Notes.md  Python__Data_Collections.md  README.md  Redesigned Schedule.md  assignment (2).csv  assignment (3).csv  assignment.csv  assignment_with_answers.docx  assignment_with_answers.md  demo.md  dimensionality_reduction_with_principal_component_.docx  dimensionality_reduction_with_principal_component_.html  dimensionality_reduction_with_principal_component_.tex  iit_rpr-sem_2-module_d-elective_robotics-qp.md  index.html  laptop_pre-read.md  notes.md  package-lock.json  package.json  pnpm-lock.yaml  rough.md  rough2.md  tsconfig.tsbuildinfo
GCCP/: AGENTIC_ENHANCEMENTS.md  ANALYSIS.md  BEFORE_AFTER_COMPARISON.md  CLAUDE.md  COMPLETION_SUMMARY.md  DOCUMENTATION.md  IMPLEMENTATION_NOTES.md  QUICK_REFERENCE.md  README.md  README_FIXES.md  TESTING_GUIDE.md  TEST_MARKDOWN_RENDERING.md  documentation.md  jest.config.js  next.config.ts  package-lock.json  package.json  supabase_updates.sql  tailwind.config.ts  verify_formatter.ts
LO-14.2.1: Install Pandas and Create Series/: In-class Quiz.md  Info.md  Lecture Notes.md  Lecture Script.md  Pre Read.md
architecture/: STATE_MANAGEMENT.md
checkpoints/: AGENT_REGISTRY.md  CREATIVE_ADDITIONS.md  ISSUES.md  MASTER_CHECKPOINT.md  TESTING_LOG.md
design/: PAGE_MAP.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: ai.rs  lib.rs  main.rs
(+276 files in other folders)
